[gd_scene load_steps=12 format=3 uid="uid://b30xj0a3srja6"]

[ext_resource type="Script" path="res://Levels/Levels.gd" id="1_f7s78"]
[ext_resource type="Texture2D" uid="uid://2e0wdnflvsko" path="res://Tiles/Tileset2.0.png" id="2_c6b4c"]
[ext_resource type="PackedScene" uid="uid://ctiyr321gw14l" path="res://UI/Game_manager/game_manager.tscn" id="2_klqjx"]
[ext_resource type="PackedScene" uid="uid://cy8nl6guub54d" path="res://Charecters/Siga/Scenes/player.tscn" id="2_unuc0"]
[ext_resource type="PackedScene" uid="uid://bxm4ov0afauwc" path="res://Charecters/NPC/SurvivalInstinct.tscn" id="3_f0p54"]
[ext_resource type="Script" path="res://Charecters/NPC/SurvivalInstinct.gd" id="6_nvljj"]
[ext_resource type="Resource" uid="uid://dl5a0noklpt8w" path="res://Items/apple.tres" id="7_h8dfc"]
[ext_resource type="Resource" uid="uid://c23jhiv6h82dm" path="res://Charecters/NPC/Dialogues/SurvivalInstinct.dialogue" id="8_40ahu"]
[ext_resource type="PackedScene" uid="uid://c5h6i1vrldhsx" path="res://Pickup/pickup.tscn" id="9_ud4u4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ik771"]
texture = ExtResource("2_c6b4c")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
13:0/0 = 0
14:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
13:1/0 = 0
14:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
13:2/0 = 0
14:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
13:3/0 = 0
14:3/0 = 0
16:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
22:3/0 = 0
23:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
13:4/0 = 0
14:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
13:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
16:7/0 = 0
18:7/0 = 0
19:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
0:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0

[sub_resource type="TileSet" id="TileSet_vp0tj"]
tile_size = Vector2i(32, 32)
sources/2 = SubResource("TileSetAtlasSource_ik771")

[node name="Tutorial" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_f7s78")

[node name="GameManager" parent="." instance=ExtResource("2_klqjx")]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_vp0tj")
rendering_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(0, 2, 0, 1, 65538, 0, 2, 65538, 0, 3, 65538, 0, 4, 65538, 0, 5, 65538, 0, 6, 131074, 0, 65537, 65538, 1, 131073, 65538, 1, 131074, 65538, 1, 196610, 65538, 1, 196611, 65538, 1, 262147, 65538, 1, 262148, 65538, 1, 327684, 65538, 1, 327685, 65538, 1, 262149, 65538, 1, 196613, 65538, 1, 131077, 65538, 1, 65541, 65538, 1, 65540, 65538, 1, 65539, 65538, 1, 196609, 65538, 1, 262145, 65538, 1, 327681, 65538, 1, 65538, 65538, 1, 262146, 65538, 1, 327682, 65538, 1, 131075, 65538, 1, 327683, 65538, 1, 131076, 65538, 1, 196612, 65538, 1, 65542, 131074, 1, 131078, 131074, 1, 196614, 131074, 1, 262150, 131074, 1, 327686, 131074, 1, 393222, 131074, 2, 393221, 65538, 2, 393217, 65538, 2, 393218, 65538, 2, 393219, 65538, 2, 393220, 65538, 2, 393216, 2, 2, 65536, 2, 1, 131072, 2, 1, 196608, 2, 1, 262144, 2, 1, 327680, 2, 1, 7, 65538, 7, 65543, 65538, 7, 131079, 65538, 7, 196615, 65538, 7, 262151, 65538, 7, 327687, 65538, 7, 393223, 65538, 7, 8, 65538, 7, 65544, 65538, 7, 131080, 65538, 7, 196616, 65538, 7, 262152, 65538, 7, 327688, 65538, 7, 393224, 65538, 7, 9, 65538, 7, 65545, 65538, 7, 131081, 65538, 7, 196617, 65538, 7, 262153, 65538, 7, 327689, 65538, 7, 393225, 65538, 7, 10, 65538, 7, 65546, 65538, 7, 131082, 65538, 7, 196618, 65538, 7, 262154, 65538, 7, 327690, 65538, 7, 393226, 65538, 7, 11, 65538, 7, 65547, 65538, 7, 131083, 65538, 7, 196619, 65538, 7, 262155, 65538, 7, 327691, 65538, 7, 393227, 65538, 7, 12, 65538, 7, 65548, 65538, 7, 131084, 65538, 7, 196620, 65538, 7, 262156, 65538, 7, 327692, 65538, 7, 393228, 65538, 7, 524282, 65538, 7, 589818, 65538, 7, 655354, 65538, 7, 720890, 65538, 7, 786426, 65538, 7, 524283, 65538, 7, 589819, 65538, 7, 655355, 65538, 7, 720891, 65538, 7, 786427, 65538, 7, 524284, 65538, 7, 589820, 65538, 7, 655356, 65538, 7, 720892, 65538, 7, 786428, 65538, 7, 524285, 65538, 7, 589821, 65538, 7, 655357, 65538, 7, 720893, 65538, 7, 786429, 65538, 7, 524286, 65538, 7, 589822, 65538, 7, 655358, 65538, 7, 720894, 65538, 7, 786430, 65538, 7, 524287, 65538, 7, 589823, 65538, 7, 655359, 65538, 7, 720895, 65538, 7, 786431, 65538, 7, 458752, 65538, 7, 524288, 65538, 7, 589824, 65538, 7, 655360, 65538, 7, 720896, 65538, 7, 458753, 65538, 7, 524289, 65538, 7, 589825, 65538, 7, 655361, 65538, 7, 720897, 65538, 7, 458754, 65538, 7, 524290, 65538, 7, 589826, 65538, 7, 655362, 65538, 7, 720898, 65538, 7, 458755, 65538, 7, 524291, 65538, 7, 589827, 65538, 7, 655363, 65538, 7, 720899, 65538, 7, 458756, 65538, 7, 524292, 65538, 7, 589828, 65538, 7, 655364, 65538, 7, 720900, 65538, 7, 458757, 65538, 7, 524293, 65538, 7, 589829, 65538, 7, 655365, 65538, 7, 720901, 65538, 7, 458758, 65538, 7, 524294, 65538, 7, 589830, 65538, 7, 655366, 65538, 7, 720902, 65538, 7, 458759, 65538, 7, 524295, 65538, 7, 589831, 65538, 7, 655367, 65538, 7, 720903, 65538, 7, 458760, 65538, 7, 524296, 65538, 7, 589832, 65538, 7, 655368, 65538, 7, 720904, 65538, 7, 458761, 65538, 7, 524297, 65538, 7, 589833, 65538, 7, 655369, 65538, 7, 720905, 65538, 7, 458762, 65538, 7, 524298, 65538, 7, 589834, 65538, 7, 655370, 65538, 7, 720906, 65538, 7, 458763, 65538, 7, 524299, 65538, 7, 589835, 65538, 7, 655371, 65538, 7, 720907, 65538, 7, 458764, 65538, 7, 524300, 65538, 7, 589836, 65538, 7, 655372, 65538, 7, 720908, 65538, 7, 131066, 65538, 7, 196602, 65538, 7, 262138, 65538, 7, 327674, 65538, 7, 393210, 65538, 7, 458746, 65538, 7, 131067, 65538, 7, 196603, 65538, 7, 262139, 65538, 7, 327675, 65538, 7, 393211, 65538, 7, 458747, 65538, 7, 131068, 65538, 7, 196604, 65538, 7, 262140, 65538, 7, 327676, 65538, 7, 393212, 65538, 7, 458748, 65538, 7, 131069, 65538, 7, 196605, 65538, 7, 262141, 65538, 7, 327677, 65538, 7, 393213, 65538, 7, 458749, 65538, 7, 131070, 65538, 7, 196606, 65538, 7, 262142, 65538, 7, 327678, 65538, 7, 393214, 65538, 7, 458750, 65538, 7, 131071, 65538, 7, 196607, 65538, 7, 262143, 65538, 7, 327679, 65538, 7, 393215, 65538, 7, 458751, 65538, 7, -262150, 65538, 7, -196614, 65538, 7, -131078, 65538, 7, -65542, 65538, 7, -6, 65538, 7, 65530, 65538, 7, -262149, 65538, 7, -196613, 65538, 7, -131077, 65538, 7, -65541, 65538, 7, -5, 65538, 7, 65531, 65538, 7, -262148, 65538, 7, -196612, 65538, 7, -131076, 65538, 7, -65540, 65538, 7, -4, 65538, 7, 65532, 65538, 7, -262147, 65538, 7, -196611, 65538, 7, -131075, 65538, 7, -65539, 65538, 7, -3, 65538, 7, 65533, 65538, 7, -262146, 65538, 7, -196610, 65538, 7, -131074, 65538, 7, -65538, 65538, 7, -2, 65538, 7, 65534, 65538, 7, -262145, 65538, 7, -196609, 65538, 7, -131073, 65538, 7, -65537, 65538, 7, -1, 65538, 7, 65535, 65538, 7, -327680, 65538, 7, -262144, 65538, 7, -196608, 65538, 7, -131072, 65538, 7, -65536, 65538, 7, -327679, 65538, 7, -262143, 65538, 7, -196607, 65538, 7, -131071, 65538, 7, -65535, 65538, 7, -327678, 65538, 7, -262142, 65538, 7, -196606, 65538, 7, -131070, 65538, 7, -65534, 65538, 7, -327677, 65538, 7, -262141, 65538, 7, -196605, 65538, 7, -131069, 65538, 7, -65533, 65538, 7, -327676, 65538, 7, -262140, 65538, 7, -196604, 65538, 7, -131068, 65538, 7, -65532, 65538, 7, -327675, 65538, 7, -262139, 65538, 7, -196603, 65538, 7, -131067, 65538, 7, -65531, 65538, 7, -327674, 65538, 7, -262138, 65538, 7, -196602, 65538, 7, -131066, 65538, 7, -65530, 65538, 7, -327673, 65538, 7, -262137, 65538, 7, -196601, 65538, 7, -131065, 65538, 7, -65529, 65538, 7, -327672, 65538, 7, -262136, 65538, 7, -196600, 65538, 7, -131064, 65538, 7, -65528, 65538, 7, -327671, 65538, 7, -262135, 65538, 7, -196599, 65538, 7, -131063, 65538, 7, -65527, 65538, 7, -327670, 65538, 7, -262134, 65538, 7, -196598, 65538, 7, -131062, 65538, 7, -65526, 65538, 7, -327669, 65538, 7, -262133, 65538, 7, -196597, 65538, 7, -131061, 65538, 7, -65525, 65538, 7, -327668, 65538, 7, -262132, 65538, 7, -196596, 65538, 7, -131060, 65538, 7, -65524, 65538, 7, -65523, 65538, 7, 13, 65538, 7, 65549, 65538, 7, 131085, 65538, 7, 196621, 65538, 7, 262157, 65538, 7, 327693, 65538, 7, 393229, 65538, 7, 458765, 65538, 7, 524301, 65538, 7, 589837, 65538, 7, 655373, 65538, 7, 720909, 65538, 7, -65522, 65538, 7, 14, 65538, 7, 65550, 65538, 7, 131086, 65538, 7, 196622, 65538, 7, 262158, 65538, 7, 327694, 65538, 7, 393230, 65538, 7, 458766, 65538, 7, 524302, 65538, 7, 589838, 65538, 7, 655374, 65538, 7, 720910, 65538, 7, -65521, 65538, 7, 15, 65538, 7, 65551, 65538, 7, 131087, 65538, 7, 196623, 65538, 7, 262159, 65538, 7, 327695, 65538, 7, 393231, 65538, 7, 458767, 65538, 7, 524303, 65538, 7, 589839, 65538, 7, 655375, 65538, 7, 720911, 65538, 7, -65520, 65538, 7, 16, 65538, 7, 65552, 65538, 7, 131088, 65538, 7, 196624, 65538, 7, 262160, 65538, 7, 327696, 65538, 7, 393232, 65538, 7, 458768, 65538, 7, 524304, 65538, 7, 589840, 65538, 7, 655376, 65538, 7, 720912, 65538, 7, -65519, 65538, 7, 17, 65538, 7, 65553, 65538, 7, 131089, 65538, 7, 196625, 65538, 7, 262161, 65538, 7, 327697, 65538, 7, 393233, 65538, 7, 458769, 65538, 7, 524305, 65538, 7, 589841, 65538, 7, 655377, 65538, 7, 720913, 65538, 7, -327667, 65538, 7, -262131, 65538, 7, -196595, 65538, 7, -131059, 65538, 7, -327666, 65538, 7, -262130, 65538, 7, -196594, 65538, 7, -131058, 65538, 7, -327665, 65538, 7, -262129, 65538, 7, -196593, 65538, 7, -131057, 65538, 7, -327664, 65538, 7, -262128, 65538, 7, -196592, 65538, 7, -131056, 65538, 7, -327663, 65538, 7, -262127, 65538, 7, -196591, 65538, 7, -131055, 65538, 7, 851960, 65538, 7, 917496, 65538, 7, 851961, 65538, 7, 917497, 65538, 7, 851962, 65538, 7, 917498, 65538, 7, 851963, 65538, 7, 917499, 65538, 7, 851964, 65538, 7, 917500, 65538, 7, 851965, 65538, 7, 917501, 65538, 7, 851966, 65538, 7, 917502, 65538, 7, 851967, 65538, 7, 917503, 65538, 7, 786432, 65538, 7, 851968, 65538, 7, 786433, 65538, 7, 851969, 65538, 7, 786434, 65538, 7, 851970, 65538, 7, 786435, 65538, 7, 851971, 65538, 7, 786436, 65538, 7, 851972, 65538, 7, 786437, 65538, 7, 851973, 65538, 7, 786438, 65538, 7, 851974, 65538, 7, 786439, 65538, 7, 851975, 65538, 7, 786440, 65538, 7, 851976, 65538, 7, 786441, 65538, 7, 851977, 65538, 7, 786442, 65538, 7, 851978, 65538, 7, 786443, 65538, 7, 851979, 65538, 7, 786444, 65538, 7, 851980, 65538, 7, 786445, 65538, 7, 851981, 65538, 7, 786446, 65538, 7, 851982, 65538, 7, 786447, 65538, 7, 851983, 65538, 7, 786448, 65538, 7, 851984, 65538, 7, 786449, 65538, 7, 851985, 65538, 7, 65528, 65538, 7, 131064, 65538, 7, 196600, 65538, 7, 262136, 65538, 7, 327672, 65538, 7, 393208, 65538, 7, 458744, 65538, 7, 524280, 65538, 7, 589816, 65538, 7, 655352, 65538, 7, 720888, 65538, 7, 786424, 65538, 7, 65529, 65538, 7, 131065, 65538, 7, 196601, 65538, 7, 262137, 65538, 7, 327673, 65538, 7, 393209, 65538, 7, 458745, 65538, 7, 524281, 65538, 7, 589817, 65538, 7, 655353, 65538, 7, 720889, 65538, 7, 786425, 65538, 7, -262152, 65538, 7, -196616, 65538, 7, -131080, 65538, 7, -65544, 65538, 7, -8, 65538, 7, -262151, 65538, 7, -196615, 65538, 7, -131079, 65538, 7, -65543, 65538, 7, -7, 65538, 7)

[node name="Player" parent="." instance=ExtResource("2_unuc0")]
position = Vector2(144, 152)

[node name="SurvivalInstinct" parent="." instance=ExtResource("3_f0p54")]
unique_name_in_owner = true
position = Vector2(104, 96)
script = ExtResource("6_nvljj")
item = ExtResource("7_h8dfc")
Speech = ExtResource("8_40ahu")

[node name="Guide1" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -32.0
offset_top = 24.0
offset_right = 158.0
offset_bottom = 73.0
text = "Use arrow keys or WASD
to move"

[node name="Guide2" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 16.0
offset_top = 152.0
offset_right = 125.0
offset_bottom = 175.0
text = "WALK OVER IT"

[node name="apple" parent="." instance=ExtResource("9_ud4u4")]
unique_name_in_owner = true
position = Vector2(64, 176)
